// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupedRepostHeader - Snapshots > matches snapshot with current user included 1`] = `
<div
  class="flex h-12 items-center justify-between overflow-hidden rounded-t-md bg-muted px-6 py-3 md:h-14"
  data-override-defaults="true"
  data-testid="grouped-repost-header"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-3 pr-3"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-5 shrink-0 text-muted-foreground"
      data-testid="repeat-icon"
    />
    <button
      aria-label="Reposters"
      class="flex min-w-0 flex-1 items-center text-base leading-6 font-bold text-foreground cursor-pointer overflow-hidden bg-transparent p-0 hidden gap-2 md:inline-flex"
      data-override-defaults="true"
      data-testid="grouped-repost-text"
    >
      <span
        class="flex min-w-0 items-center hover:underline"
        data-testid="typography"
      >
        <span
          data-testid="repost-text"
        >
          <span
            data-testid="repost-text-name"
          >
            You
          </span>
           
          and 1 others reposted this
        </span>
      </span>
      <div
        class="shrink-0 transition-opacity hover:opacity-80"
        data-override-defaults="true"
        data-testid="grouped-repost-avatars"
      >
        <div
          data-items="3"
          data-max="4"
          data-testid="avatar-group"
          data-total="2"
        >
          Avatar Group (
          3
           avatars)
        </div>
      </div>
    </button>
    <button
      aria-label="Reposters"
      class="flex min-w-0 flex-1 items-center text-base leading-6 font-bold text-foreground cursor-pointer overflow-hidden bg-transparent p-0 inline-flex text-left md:hidden"
      data-override-defaults="true"
      data-testid="grouped-repost-text-mobile"
    >
      <span
        data-testid="repost-text"
      >
        <span
          data-testid="repost-text-name"
        >
          You
        </span>
        , others reposted
      </span>
    </button>
  </div>
  <div
    class="flex flex-shrink-0 items-center gap-1"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-4 text-muted-foreground"
      data-testid="clock-icon"
    />
    <span
      class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
      data-testid="typography"
    >
      2h
    </span>
  </div>
</div>
`;

exports[`GroupedRepostHeader - Snapshots > matches snapshot with multiple reposters collapsed 1`] = `
<div
  class="flex h-12 items-center justify-between overflow-hidden rounded-t-md bg-muted px-6 py-3 md:h-14"
  data-override-defaults="true"
  data-testid="grouped-repost-header"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-3 pr-3"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-5 shrink-0 text-muted-foreground"
      data-testid="repeat-icon"
    />
    <button
      aria-label="Reposters"
      class="flex min-w-0 flex-1 items-center text-base leading-6 font-bold text-foreground cursor-pointer overflow-hidden bg-transparent p-0 hidden gap-2 md:inline-flex"
      data-override-defaults="true"
      data-testid="grouped-repost-text"
    >
      <span
        class="flex min-w-0 items-center hover:underline"
        data-testid="typography"
      >
        <span
          data-testid="repost-text"
        >
          <span
            data-testid="repost-text-name"
          >
            Alice
          </span>
           
          and 2 others reposted this
        </span>
      </span>
      <div
        class="shrink-0 transition-opacity hover:opacity-80"
        data-override-defaults="true"
        data-testid="grouped-repost-avatars"
      >
        <div
          data-items="3"
          data-max="4"
          data-testid="avatar-group"
          data-total="3"
        >
          Avatar Group (
          3
           avatars)
        </div>
      </div>
    </button>
    <button
      aria-label="Reposters"
      class="flex min-w-0 flex-1 items-center text-base leading-6 font-bold text-foreground cursor-pointer overflow-hidden bg-transparent p-0 inline-flex text-left md:hidden"
      data-override-defaults="true"
      data-testid="grouped-repost-text-mobile"
    >
      <span
        data-testid="repost-text"
      >
        <span
          data-testid="repost-text-name"
        >
          Alice
        </span>
        , others reposted
      </span>
    </button>
  </div>
  <div
    class="flex flex-shrink-0 items-center gap-1"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-4 text-muted-foreground"
      data-testid="clock-icon"
    />
    <span
      class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
      data-testid="typography"
    >
      2h
    </span>
  </div>
</div>
`;

exports[`GroupedRepostHeader - Snapshots > matches snapshot with multiple reposters expanded 1`] = `
<div
  class="flex h-12 items-center justify-between overflow-hidden rounded-t-md bg-muted px-6 py-3 md:h-14"
  data-override-defaults="true"
  data-testid="grouped-repost-header"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-3 pr-3"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-5 shrink-0 text-muted-foreground"
      data-testid="repeat-icon"
    />
    <button
      aria-label="Reposters"
      class="flex min-w-0 flex-1 items-center text-base leading-6 font-bold text-foreground cursor-pointer overflow-hidden bg-transparent p-0 hidden gap-2 md:inline-flex"
      data-override-defaults="true"
      data-testid="grouped-repost-text"
    >
      <span
        class="flex min-w-0 items-center hover:underline"
        data-testid="typography"
      >
        <span
          data-testid="repost-text"
        >
          <span
            data-testid="repost-text-name"
          >
            Alice
          </span>
           
          and 2 others reposted this
        </span>
      </span>
      <div
        class="shrink-0 transition-opacity hover:opacity-80"
        data-override-defaults="true"
        data-testid="grouped-repost-avatars"
      >
        <div
          data-items="3"
          data-max="4"
          data-testid="avatar-group"
          data-total="3"
        >
          Avatar Group (
          3
           avatars)
        </div>
      </div>
    </button>
    <button
      aria-label="Reposters"
      class="flex min-w-0 flex-1 items-center text-base leading-6 font-bold text-foreground cursor-pointer overflow-hidden bg-transparent p-0 inline-flex text-left md:hidden"
      data-override-defaults="true"
      data-testid="grouped-repost-text-mobile"
    >
      <span
        data-testid="repost-text"
      >
        <span
          data-testid="repost-text-name"
        >
          Alice
        </span>
        , others reposted
      </span>
    </button>
  </div>
  <div
    class="flex flex-shrink-0 items-center gap-1"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-4 text-muted-foreground"
      data-testid="clock-icon"
    />
    <span
      class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
      data-testid="typography"
    >
      2h
    </span>
  </div>
</div>
`;

exports[`GroupedRepostHeader - Snapshots > matches snapshot with single reposter 1`] = `
<div
  class="flex h-12 items-center justify-between overflow-hidden rounded-t-md bg-muted px-6 py-3 md:h-14"
  data-override-defaults="true"
  data-testid="grouped-repost-header"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-3 pr-3"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-5 shrink-0 text-muted-foreground"
      data-testid="repeat-icon"
    />
    <span
      class="flex min-w-0 flex-1 items-center text-base leading-6 font-bold text-foreground"
      data-testid="grouped-repost-text"
    >
      <span
        data-testid="repost-text"
      >
        <span
          data-testid="repost-text-name"
        >
          Alice
        </span>
        reposted
      </span>
    </span>
  </div>
  <div
    class="flex flex-shrink-0 items-center gap-1"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-4 text-muted-foreground"
      data-testid="clock-icon"
    />
    <span
      class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
      data-testid="typography"
    >
      2h
    </span>
  </div>
</div>
`;
